--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+
 *,
 *::after,
 *::before {
@@ -12,4 +14,54 @@ html {
 
 body {
   box-sizing: border-box;
+  font-family: "DM Sans", sans-serif;
+}
+
+.container {
+  max-width: 118.4rem;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.btn {
+  font-family: inherit;
+  padding: 0.9rem 3rem;
+  border-radius: 10rem;
+  border: 0.2rem solid #ebeaed;
+  background-color: #fff;
+  cursor: pointer;
+  color: #1e0e62;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
+.header {
+  min-height: 10rem;
+}
+
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 10rem;
+}
+
+.header__logo:visited,
+.header__logo:link {
+  display: inline-block;
+  color: currentColor;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 2.4rem;
+  margin-left: 0.3rem;
+  color: #1e0e62;
+}
+
+.header__nav {
+  margin-right: 0.7rem;
+}
+
+.intro {
+  background-color: #f1f1f1;
+  min-height: 52rem;
 }
