--- a/style.css
+++ b/style.css
@@ -74,12 +74,14 @@ body {
   font-weight: 700;
   font-size: 4.3rem;
   margin-bottom: 3.2rem;
+  line-height: 6rem;
 }
 
 .intro__description {
   color: #15143966;
   font-size: 2.2rem;
   font-weight: 400;
+  line-height: 2.6rem;
 }
 
 .intro__photo img {
@@ -87,4 +89,68 @@ body {
   width: 100%;
   height: auto;
   border-radius: 1rem;
+}
+
+.feature {
+  background-color: #f1f1f1;
+}
+
+.feature .container {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
+.feature__text {
+  margin: 0 auto 9.5rem auto;
+  max-width: 72rem;
+}
+
+.feature__title,
+.feature__description {
+  text-align: center;
+}
+
+.feature__title {
+  font-size: 4.2rem;
+  font-weight: 700;
+  color: #1e0e62;
+  margin-bottom: 4rem;
+}
+
+.feature__description {
+  font-size: 2.2rem;
+  font-weight: 500;
+  color: #15143966;
+  line-height: 3.2rem;
+}
+
+.feature__content {
+  display: flex;
+  justify-content: space-around;
+  gap: 6rem 2rem;
+  flex-wrap: wrap;
+}
+
+.feature__item {
+  width: 28rem;
+  text-align: center;
+}
+
+.feature__item h3 {
+  font-size: 1.8rem;
+  color: #1e0e62;
+  font-weight: 500;
+  margin-bottom: 2.1rem;
+  line-height: 2.8rem;
+}
+
+.feature__item p {
+  font-size: 1.6rem;
+  color: #15143966;
+  font-weight: 400;
+  line-height: 2.6rem;
+}
+
+.showcase {
+  min-height: 52rem;
 }
